# Substring-Word-Finder

./: .gitignore  CNAME  README.md  ThirdPartyLicenses.txt  app.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
src/substring_word_finder/: __init__.py  index.html  main.py
src/substring_word_finder/old/flask/: .gitignore  LICENSE  app.py
src/substring_word_finder/old/flask/templates/: index.html
templates/: index.html  result.html
